Improve routes, add landing and dashboard controllers

--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -7,7 +7,7 @@
           div = raw I18n.t 'instruction.text'
           div = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
         .col-md-12
-          = f.input :country, as: :country, priority: Rails.configuration.application.fetch(:country_priority)
+          = f.input :country, as: :country, priority: Rails.configuration.application.country_priority
           = f.input :reason, collection: Verification.reasons.keys.to_a, :label_method => lambda { |item| t("attributes.reasons.#{item}") }
           = f.input :email
           .row
@@ -19,7 +19,7 @@
           = f.input :passport_data
       .row
         .col-md-12
-          = f.file_field :documents, multiple: true, accept: Rails.configuration.application.fetch(:document_formats)
+          = f.file_field :documents, multiple: true, accept: Rails.configuration.application.document_formats
           div style='color: red;'
             = f.error :documents
       br
