--- a/app/views/layouts/verification.slim
+++ b/app/views/layouts/verification.slim
@@ -2,11 +2,10 @@ doctype html
 html
   head
     meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" /
-    title Agnessa
+    title Agnessa verification for #{current_client.subdomain}
     meta content="width=device-width,initial-scale=1" name="viewport" /
 
-    = javascript_include_tag "application"
-    = stylesheet_link_tag "application"
+    = stylesheet_link_tag "verification"
 
     = stylesheet_link_tag 'https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css', media: 'all'
     = javascript_include_tag "https://code.jquery.com/jquery-3.3.1.min.js"
