--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -6,11 +6,20 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
       span.navbar-toggler-icon
     #navbarSupportedContent.collapse.navbar-collapse
       ul.navbar-nav.mr-auto
-        li.nav-item.dropdown.mr-2.d-flex.align-items-center
-          =active_link_to 'Администраторы', admin_client_users_path, class: 'my-lg-0 py-lg-0 nav-link'
-        li.nav-item.dropdown.mr-2.d-flex.align-items-center
-          =active_link_to 'Список верификаций', admin_verifications_path, class: 'my-lg-0 py-lg-0 nav-link'
-        li.nav-item.dropdown.mr-2.d-flex.align-items-center
-          =active_link_to 'Статусы Верификаций', admin_review_result_label_index_path, class: 'my-lg-0 py-lg-0 nav-link'
-        li.nav-item.dropdown.mr-2.d-flex.align-items-center
-          = active_link_to 'Настройки',admin_client_path, class: 'my-lg-0 py-lg-0 nav-link'
+        li.nav-item.mr-2.d-flex.align-items-center
+          =active_link_to 'Верификации', admin_verifications_path, class: 'my-lg-0 py-lg-0 nav-link'
+      ul.navbar-nav.navbar-right
+        li.nav-item.dropdown
+          = link_to 'Настройки', '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false
+          .dropdown-menu.dropdown-menu-right[aria-labelledby="navbarDropdown"]
+            = link_to 'Администраторы', admin_client_users_path, class: 'dropdown-item'
+            = link_to 'Статусы Верификаций', admin_review_result_labels_path, class: 'dropdown-item'
+            = link_to 'Профиль организации', admin_client_path, class: 'dropdown-item'
+        li.nav-item.dropdown
+          = link_to '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false do
+            = gravatar_tag current_user,
+              size: 32
+            span.ml-2
+              span= current_user.email
+          .dropdown-menu.dropdown-menu-right[aria-labelledby="navbarDropdown"]
+            = link_to 'Выйти', '#todo', class: 'dropdown-item'
