--- a/app/views/application/_table.slim
+++ b/app/views/application/_table.slim
@@ -12,14 +12,13 @@
         - columns.each do |column|
           th class=(decorator.present? ? decorator.table_th_class(column) : '') title=column
             = decorator.present? ? sort_column(column, decorator.object_class.human_attribute_name(column)) : column
-            = hide_column column
     - if block_given?
       thead
         = yield
     tbody
       - items.each do |item|
         - item_decorated = item.decorated? ? item : decorator.decorate(item)
-        tr is='dapi-tr' data-href=url_for(item) class=item_decorated.class.table_tr_class(item)
+        tr is='dapi-tr' data-href=url_for([:admin, item]) class=item_decorated.class.table_tr_class(item)
           - columns.each do |column|
             td class=item_decorated.class.table_td_class(column)
               = item_decorated.send column
