--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,9 +1,9 @@
 doctype html
 html lang=I18n.locale
   head
-    = render 'head'
+    = render 'shared/head'
   body
-    = render 'navbar'
+    = render 'shared/navbar'
     - if @container == :fluid
       .container-fluid.px-3.py-3
         = yield
@@ -12,4 +12,4 @@ html lang=I18n.locale
         = yield
     - else
       = yield
-    = render 'footer'
+    = render 'shared/footer'
