--- a/app/views/shared/_brand.slim
+++ b/app/views/shared/_brand.slim
@@ -1,3 +1,3 @@
-a.navbar-brand( href=admin_verifications_path title=AppVersion.to_s)
+a.navbar-brand( href=admin_root_path title=AppVersion.to_s)
   = image_tag asset_url('logo.png'), width: 38
   span.ml-2 Agnessa
