--- a/app/views/layouts/simple.html.slim
+++ b/app/views/layouts/simple.html.slim
@@ -1,11 +1,11 @@
 doctype html
 html lang=I18n.locale
   head
-    = render 'head'
+    = render 'shared/head'
   body
     .container.px-3.py-5[style='max-width: 900px']
-      = render 'brand'
+      = render 'shared/brand'
       hr
       = yield
 
-    = render 'footer', width: 900
+    = render 'shared/footer', width: 900
