--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -6,7 +6,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
     #navbarSupportedContent.collapse.navbar-collapse
       ul.navbar-nav.mr-auto
         li.nav-item.mr-2.d-flex.align-items-center
-          =active_link_to 'Верификации', admin_verifications_path, class: 'my-lg-0 py-lg-0 nav-link'
+          =active_link_to 'Заявки на верификацию', admin_verifications_path, class: 'my-lg-0 py-lg-0 nav-link'
       ul.navbar-nav.navbar-right
         li.nav-item.dropdown
           = link_to 'Настройки', '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false
