--- a/app/views/layouts/verification.slim
+++ b/app/views/layouts/verification.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" /
-    title Agnessa verification for #{current_client.subdomain}
+    title Agnessa verification for #{current_account.subdomain}
     meta content="width=device-width,initial-scale=1" name="viewport" /
 
     = stylesheet_link_tag "verification"
