--- a/app/views/admin/accounts/show.html.slim
+++ b/app/views/admin/accounts/show.html.slim
@@ -4,7 +4,7 @@
       .card-header
         | Настройки
       .card-body
-        = simple_form_for(client, url: admin_client_path) do |f|
+        = simple_form_for(account, url: admin_account_path) do |f|
           = f.error_notification
           = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
@@ -21,9 +21,9 @@
       .card-header
         | Секрет
       .card-body
-        = client.secret
+        = account.secret
         br
-        = link_to 'создать новый', recreate_secret_admin_client_path, method: :post, 'data-confirm': "Точно создать новый секрет?", class: 'btn btn-success'
+        = link_to 'создать новый', recreate_secret_admin_account_path, method: :post, 'data-confirm': "Точно создать новый секрет?", class: 'btn btn-success'
 
 br
 
@@ -33,7 +33,7 @@ br
       .card-header
         | Проверка отправки уведомлений
       .card-body
-        = simple_form_for :data, url: verification_callback_test_admin_client_path, html: { id: "verification_callback_form" }, remote: true do |f|
+        = simple_form_for :data, url: verification_callback_test_admin_account_path, html: { id: "verification_callback_form" }, remote: true do |f|
           = f.input :id, input_html: { value: '123' }, required: false
           = f.input :email, input_html: { value: 'test@test.test' }, required: false
           = f.input :status, input_html: { value: 'verified' }, required: false
