--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -1,5 +1,5 @@
 h1 Agnessa Publis Landing
 
 ul
-  - clients.each do |client|
-    li= link_to client.name, admin_root_url(subdomain: client.subdomain)
+  - accounts.each do |accounts|
+    li= link_to account.name, admin_root_url(subdomain: account.subdomain)
