--- a/app/views/admin/applicants/show.slim
+++ b/app/views/admin/applicants/show.slim
@@ -1,5 +1,5 @@
 = link_to '&larr; назад в аппликанты'.html_safe
-h1 Аппликат  #{applicant.id}
+h1 Аппликат ##{record.id}
 .row
   .col-md-6
-    = render 'attributes', item: applicant
+    = render 'attributes', item: record
