Fix back applicants link

--- a/app/views/admin/applicants/show.slim
+++ b/app/views/admin/applicants/show.slim
@@ -1,4 +1,4 @@
-= link_to '&larr; назад в аппликанты'.html_safe
+= link_to '&larr; назад в аппликанты'.html_safe, admin_applicants_path
 h1 Аппликат ##{record.id}
 .row
   .col-md-6
