--- a/app/views/verification_mailer/refused.slim
+++ b/app/views/verification_mailer/refused.slim
@@ -1,3 +1,5 @@
 h2 Добрый день!
 
-p Уважаемый #{@verification.last_name} #{@verification.name}, вы успешно прошли верификацию!
+p Уважаемый #{@verification.last_name} #{@verification.name}, вы не прошли верификацию у #{@client.name}.
+
+p Комментарий: #{@verification.user_comment}
