--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -1,5 +1,5 @@
 h1 Agnessa Publis Landing
 
 ul
-  - accounts.each do |accounts|
+  - accounts.each do |account|
     li= link_to account.name, admin_root_url(subdomain: account.subdomain)
