--- a/app/views/verification_mailer/confirmed.slim
+++ b/app/views/verification_mailer/confirmed.slim
@@ -1,3 +1,3 @@
 h2 Добрый день!
 
-p Уважаемый #{@verification.last_name} #{@verification.name}, вы успешно прошли верификацию у #{@client.name}.
+p Уважаемый #{@verification.last_name} #{@verification.name}, вы успешно прошли верификацию у #{@account.name}.
