--- a/app/views/admin/verifications/_status_search_form.slim
+++ b/app/views/admin/verifications/_status_search_form.slim
@@ -1,7 +1,7 @@
 
 ul.nav.nav-pills.mb-3
-  - Verification.statuses.each do |key, value|
-    -url = url_for(q: request.query_parameters.fetch(:q, {}).merge(status_eq: value))
-    -klass = active_class('nav-link', request.query_parameters.fetch(:q, {}).fetch(:status_eq, nil) == value.to_s)
+  - Verification::STATUSES.each do |status|
+    -url = url_for(q: request.query_parameters.fetch(:q, {}).merge(status_eq: status))
+    -klass = active_class('nav-link', request.query_parameters.fetch(:q, {}).fetch(:status_eq, nil) == status.to_s)
     li.nav-item
-      = link_to key, url, class: klass
+      = link_to status, url, class: klass
