add all to status pills

--- a/app/views/admin/verifications/_status_search_form.slim
+++ b/app/views/admin/verifications/_status_search_form.slim
@@ -1,7 +1,10 @@
 
 ul.nav.nav-pills.mb-3
+  - status_from_query = request.query_parameters.fetch(:q, {}).fetch(:status_eq, nil)
+  li.nav-item
+    = link_to t('.all'), url_for(q: request.query_parameters.fetch(:q, {}).except(:status_eq)), class: active_class('nav-link', status_from_query.nil?)
   - Verification.statuses.each do |key, value|
     -url = url_for(q: request.query_parameters.fetch(:q, {}).merge(status_eq: value))
-    -klass = active_class('nav-link', request.query_parameters.fetch(:q, {}).fetch(:status_eq, nil) == value.to_s)
+    -klass = active_class('nav-link', status_from_query == value.to_s)
     li.nav-item
       = link_to key, url, class: klass
