--- a/app/views/admin/accounts/show.html.slim
+++ b/app/views/admin/accounts/show.html.slim
@@ -11,7 +11,7 @@
           .form-inputs
             = f.input :subdomain
             = f.input :verification_callback_url
-
+            = f.input :return_url
 
           .form-actions
             = f.button :submit, class: 'btn btn-success', value: 'Сохранить'
