--- a/app/views/admin/accounts/show.html.slim
+++ b/app/views/admin/accounts/show.html.slim
@@ -11,6 +11,7 @@
           .form-inputs
             = f.input :subdomain
             = f.input :verification_callback_url
+            = f.input :email_from
 
 
           .form-actions
