--- a/app/views/admin/application/_time_form.slim
+++ b/app/views/admin/application/_time_form.slim
@@ -1,1 +1,9 @@
-../../application/_time_form.slim
+= search_form_for [:admin, q] do |f|
+  .row
+    .col-md-4
+      = f.input :created_at_gteq, input_html: { class: 'datetimepicker' }
+    .col-md-4
+      = f.input :created_at_lt, input_html: { class: 'datetimepicker' }
+  - if block_given? 
+    = yield f
+  = f.button :submit, class: 'btn btn-primary'
