--- a/app/views/admin/verifications/_index_form.slim
+++ b/app/views/admin/verifications/_index_form.slim
@@ -5,6 +5,6 @@
     .col-md-4
       = f.input :name_or_last_name_cont, label: 'Имя\Фамилия содержит:'
     .col-md-4
-      = f.input :passport_data_cont, label: 'Номер паспорта содержит:'
+      = f.input :document_number_cont, label: 'Номер паспорта содержит:'
 br
 = render 'status_search_form'
