--- a/app/views/admin/verifications/new.html.slim
+++ b/app/views/admin/verifications/new.html.slim
@@ -5,7 +5,7 @@
       = f.input :reason, collection: Verification::REASONS
       = f.input :name
       = f.input :last_name
-      = f.input :passport_data
+      = f.input :document_number
   .row
     .col-md-4
       = f.file_field :documents, multiple: true, accept: 'image/png,image/gif,image/jpeg,image/webp,image/*'
