--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -15,7 +15,7 @@
         .col-6
           = f.input :country, as: :country, priority: Rails.configuration.application.country_priority
         .col-6
-          = f.input :passport_data
+          = f.input :document_number
       .row
         .col-6
           = f.input :name
