--- a/app/views/application/_verification_select.slim
+++ b/app/views/application/_verification_select.slim
@@ -6,7 +6,7 @@
   = f.search_field :name_or_last_name_cont
   br
   = f.label 'Passport contains:'
-  = f.search_field :passport_data_cont
+  = f.search_field :document_number_cont
   br
   = f.submit
 ul.nav.nav-pills.mb-3
