--- a/app/views/admin/verifications/show.html.slim
+++ b/app/views/admin/verifications/show.html.slim
@@ -14,4 +14,5 @@ h1 Заявка на верификацию #{verification.id}
       = f.input :user_comment, as: :text, label: 'Дополнительный Комментарий для пользователя', required: true
       = f.input :moderator_comment, as: :text, label: 'Комментарий для модераторов', required: false
       = f.button :submit, 'Отклонить', class: 'btn btn-danger align-right'
-
+    br
+    = render partial: 'admin/applicants/block_form', locals: {applicant: verification.applicant}
