Feautre/email readme admin [#181605136] (#15)
* [#181605136] add readme

* [#181605136] add email_from to admin

* Update simple_form.ru.yml

Co-authored-by: Danil Pismenny <dapi@users.noreply.github.com>

--- a/app/views/admin/accounts/show.html.slim
+++ b/app/views/admin/accounts/show.html.slim
@@ -11,6 +11,7 @@
           .form-inputs
             = f.input :subdomain
             = f.input :verification_callback_url
+            = f.input :email_from
             = f.input :return_url
 
           .form-actions
