Minor update verifications/created

--- a/app/views/client/verifications/created.slim
+++ b/app/views/client/verifications/created.slim
@@ -1,5 +1,6 @@
 .row.justify-content-center.instruction
   .jumbotron
+    .alert.alert-warning Принята заявка ##{verification.id}
     .row
       .col-md-12
         div= raw I18n.t 'instruction.success.text'
