--- a/app/views/admin/accounts/show.html.slim
+++ b/app/views/admin/accounts/show.html.slim
@@ -35,9 +35,11 @@ br
         | Проверка отправки уведомлений
       .card-body
         = simple_form_for :data, url: verification_callback_test_admin_account_path, html: { id: "verification_callback_form" }, remote: true do |f|
-          = f.input :id, input_html: { value: '123' }, required: false
-          = f.input :email, input_html: { value: 'test@test.test' }, required: false
-          = f.input :status, input_html: { value: 'verified' }, required: false
+          = f.input :external_id, input_html: { value: '123' }, label: :external_id, required: true
+          = f.input :applicant_id, input_html: { value: '1' }, label: :applicant_id, required: true
+          = f.input :verification_id, input_html: { value: '1' }, label: :verification_id, required: true
+          = f.input :email, input_html: { value: 'test@test.test' }, label: :email, required: true
+          = f.input :status, collection: Verification::STATUSES, label: :status, selected: Verification::STATUSES.first, include_blank: false
 
           = f.button :submit, class: 'btn btn-success', value: 'Отправить'
       .card-footer#verification_callback_result
@@ -48,6 +50,14 @@ br
         | Пример уведомления
       .card-body
         pre
-          code
-            |  { id: 123, status: 'verified'}
-        |  Возможные status: verified, banned, rejected, reseted, pending
+          | Content-Type: application/json
+          br
+          br
+          |
+            {
+              external_id: "123"      # Внешний ID аккаунт проходящего верификацию
+              applicant_id: 1         # ID апликанта в Агнесса
+              verification_id: 22     # ID заявки
+              email: "test@test.test" # Email пользователя из заявки
+              status: "pending"       # Статус заявки, возможные status: #{Verification::STATUSES}
+            }
