[#181725931] integrate to admin

--- a/app/views/admin/accounts/show.html.slim
+++ b/app/views/admin/accounts/show.html.slim
@@ -39,7 +39,7 @@
           .form-actions
             = f.button :submit, class: 'btn btn-success', value: 'Сохранить'
           hr
-            pre =raw account.form_description
+            pre =raw account.form_description_interpolated
 
 br
 
