[#181625157] журналирование заявок и аппликантов

--- a/app/views/admin/applicants/show.slim
+++ b/app/views/admin/applicants/show.slim
@@ -3,5 +3,7 @@ h1 #{record.model_name.human} ##{record.id}
 .row
   .col-md-6
     = render 'attributes', item: record
+  .col-md-6
+    = render partial: 'logs', locals: {record: record}
 = render partial: 'admin/applicants/block_form', locals: {applicant: record}
 = render partial: 'verifications', locals: {applicant: record}
