--- a/app/views/admin/verifications/show.html.slim
+++ b/app/views/admin/verifications/show.html.slim
@@ -8,6 +8,7 @@ h1 #{verification.model_name.human} #{verification.id}
 .row
   .col-6
     = link_to t('.confirm'), confirm_admin_verification_path(verification), method: :post, class: 'btn btn-success', method: { confirm: t('.confirm_alert') }
+    = render partial: 'logs', locals: {record: verification}
   .col-6
     = simple_form_for verification, url: refuse_admin_verification_path(verification), method: :post do |f|
       = f.input :review_result_labels, collection: ReviewResultLabel.options_for_select, input_html: { size: 15, multiple: true }, required: true
