--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -20,9 +20,9 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
             = link_to 'Профиль организации', admin_account_path, class: 'dropdown-item'
         li.nav-item.dropdown
           = link_to '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false do
-            = gravatar_tag current_user,
+            = gravatar_tag current_member,
               size: 32
             span.ml-2
-              span= current_user.email
+              span= current_member.email
           .dropdown-menu.dropdown-menu-right[aria-labelledby="navbarDropdown"]
             = link_to 'Выйти', '#todo', class: 'dropdown-item'
