[#181622802] filesize inside form

--- a/app/assets/stylesheets/verification.css
+++ b/app/assets/stylesheets/verification.css
@@ -2,3 +2,6 @@
     padding-top: 100px;
 }
 
+.file .btn-default .fileinput-exists, .file .btn-default .fileinput-new, .file  .form-control{
+    display: none;
+}
