--- a/app/views/admin/accounts/show.html.slim
+++ b/app/views/admin/accounts/show.html.slim
@@ -25,6 +25,24 @@
         = account.secret
         br
         = link_to 'создать новый', recreate_secret_admin_account_path, method: :post, 'data-confirm': "Точно создать новый секрет?", class: 'btn btn-success'
+    br
+    .card
+      .card-header
+        | Описание для формы
+      .card-body
+        = simple_form_for(account, url: admin_account_path) do |f|
+          div Доступные переменные:
+          ul
+            -account.interpolate_hash.each do |key, value|
+              li %{#{key}} => #{value}
+          br
+          .form-inputs
+            = f.input :form_description, label: false, input_html: {rows: 12}
+
+          .form-actions
+            = f.button :submit, class: 'btn btn-success', value: 'Сохранить'
+          hr
+            div =raw account.form_description_interpolated
 
 br
 
