--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -30,9 +30,12 @@
             = raw I18n.t 'instruction.text', host: current_account.host
       .row
         .col-md-12
-          = f.file_field :documents, multiple: true, accept: Rails.configuration.application.document_formats
-          small.form-text.text-muted  ="До #{Rails.configuration.application.max_upload_file_size/1024/1024} мб"
-          div style='color: red;'
-            = f.error :documents
+          = f.input :documents,
+                     wrapper: :vertical_file,
+                     as: :file,
+                     input_html: { multiple: true, accept: Rails.configuration.application.document_formats },
+                     label: "Документы",
+                     hint: "До #{number_to_human_size(Rails.configuration.application.max_upload_file_size)}",
+                     maxlength: Rails.configuration.application.max_upload_file_size
       br
       = f.submit class: 'btn btn-bg btn-primary'
