--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -6,18 +6,18 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
     #navbarSupportedContent.collapse.navbar-collapse
       ul.navbar-nav.mr-auto
         li.nav-item.mr-2.d-flex.align-items-center
-          =active_link_to 'Заявки на верификацию', admin_verifications_path, class: 'my-lg-0 py-lg-0 nav-link'
+          =active_link_to t('.verifications'), admin_verifications_path, class: 'my-lg-0 py-lg-0 nav-link'
         li.nav-item.mr-2.d-flex.align-items-center
-          = active_link_to 'Аппликанты', admin_applicants_path, class: 'my-lg-0 py-lg-0 nav-link'
+          = active_link_to t('.applicants'), admin_applicants_path, class: 'my-lg-0 py-lg-0 nav-link'
         li.nav-item.mr-2.d-flex.align-items-center
-          = active_link_to 'Заявка от пользователя', test_new_client_verification_url, class: 'my-lg-0 py-lg-0 nav-link'
+          = active_link_to t('.verification_new'), test_new_client_verification_url, class: 'my-lg-0 py-lg-0 nav-link'
       ul.navbar-nav.navbar-right
         li.nav-item.dropdown
-          = link_to 'Настройки', '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false
+          = link_to t('.settings'), '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false
           .dropdown-menu.dropdown-menu-right[aria-labelledby="navbarDropdown"]
-            = link_to 'Администраторы', admin_members_path, class: 'dropdown-item'
-            = link_to 'Статусы Верификаций', admin_review_result_labels_path, class: 'dropdown-item'
-            = link_to 'Профиль организации', admin_account_path, class: 'dropdown-item'
+            = link_to t('.admins'), admin_members_path, class: 'dropdown-item'
+            = link_to t('.review_result_labels'), admin_review_result_labels_path, class: 'dropdown-item'
+            = link_to t('.profile'), admin_account_path, class: 'dropdown-item'
         li.nav-item.dropdown
           = link_to '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false do
             = gravatar_tag current_user,
@@ -25,4 +25,4 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
             span.ml-2
               span= current_user.email
           .dropdown-menu.dropdown-menu-right[aria-labelledby="navbarDropdown"]
-            = link_to 'Выйти', '#todo', class: 'dropdown-item'
+            = link_to t('.exit'), '#todo', class: 'dropdown-item'
