--- a/app/views/admin/verifications/_index_form.slim
+++ b/app/views/admin/verifications/_index_form.slim
@@ -1,10 +1,10 @@
 = render 'time_form' do |f|
   .row
     .col-md-4
-      = f.input :legacy_verification_id_cont, label: 'ID содержит:'
+      = f.input :legacy_verification_id_cont
     .col-md-4
-      = f.input :name_or_last_name_cont, label: 'Имя\Фамилия содержит:'
+      = f.input :name_or_last_name_cont
     .col-md-4
-      = f.input :document_number_cont, label: 'Номер паспорта содержит:'
+      = f.input :document_number_cont
 br
 = render 'status_search_form'
