--- a/app/views/admin/verifications/show.html.slim
+++ b/app/views/admin/verifications/show.html.slim
@@ -1,5 +1,5 @@
 = link_to '&larr; назад в заявки'.html_safe
-h1 Заявка на верификацию #{verification.id}
+h1 #{verification.model_name.human} #{verification.id}
 .row
   .col-md-6
     = render 'attributes', item: verification
@@ -7,12 +7,12 @@ h1 Заявка на верификацию #{verification.id}
     = render 'documents', verification: verification
 .row
   .col-6
-    = link_to 'Подтвердить', confirm_admin_verification_path(verification), method: :post, class: 'btn btn-success', method: { confirm: 'Подтверждаем заявку?' }
+    = link_to t('.confirm'), confirm_admin_verification_path(verification), method: :post, class: 'btn btn-success', method: { confirm: t('.confirm_alert') }
   .col-6
     = simple_form_for verification, url: refuse_admin_verification_path(verification), method: :post do |f|
-      = f.input :review_result_labels, collection: ReviewResultLabel.options_for_select, input_html: { size: 15, multiple: true }, label: 'Причины', required: true
-      = f.input :user_comment, as: :text, label: 'Дополнительный Комментарий для пользователя', required: true
-      = f.input :moderator_comment, as: :text, label: 'Комментарий для модераторов', required: false
-      = f.button :submit, 'Отклонить', class: 'btn btn-danger align-right'
+      = f.input :review_result_labels, collection: ReviewResultLabel.options_for_select, input_html: { size: 15, multiple: true }, required: true
+      = f.input :user_comment, as: :text, required: true
+      = f.input :moderator_comment, as: :text, required: false
+      = f.button :submit, t('.refuse'), class: 'btn btn-danger align-right'
     br
     = render partial: 'admin/applicants/block_form', locals: {applicant: verification.applicant}
