--- a/app/views/client/verifications/blocked.html.slim
+++ b/app/views/client/verifications/blocked.html.slim
@@ -1,4 +1,4 @@
 .row.justify-content-center.instruction
   .jumbotron
-    h1.mb-4 
-      | Для вашего аккаунта подача заявок была заблокирована
+    h1.mb-4
+      = t('client.verifications.blocked.message')
