--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -35,7 +35,6 @@
                      as: :file,
                      input_html: { multiple: true, accept: Rails.configuration.application.document_formats },
                      label: "Документы",
-                     hint: "До #{number_to_human_size(Rails.configuration.application.max_upload_file_size)}",
-                     maxlength: Rails.configuration.application.max_upload_file_size
+                     hint: "До #{number_to_human_size(Rails.configuration.application.max_upload_file_size)}"
       br
       = f.submit class: 'btn btn-bg btn-primary'
