--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -1,7 +1,7 @@
 .row.justify-content-center.instruction
   .jumbotron
     h1.mb-4 
-      = t 'instruction.title', account_id: verification.external_id, org: current_account.public_name
+      = t '.title', account_id: verification.external_id, org: current_account.public_name
     = simple_form_for verification, url: form_path do |f|
       .row
         .col-md-12
