--- a/app/views/client/verifications/created.slim
+++ b/app/views/client/verifications/created.slim
@@ -3,7 +3,7 @@
     .alert.alert-warning Принята заявка ##{verification.id}
     .row
       .col-md-12
-        div= raw I18n.t 'instruction.success.text'
+        div= raw t '.message'
     - if current_account.return_url.present?
       .row
         .col-md-12
