[#181622802] file size exist (#27)
* stash

* [#181622802] filesize inside form

* [#181622802] fix

* [#181622802] fox form

* Update new.html.slim

--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -30,8 +30,11 @@
             = raw verification.account.form_description_interpolated
       .row
         .col-md-12
-          = f.file_field :documents, multiple: true, accept: Rails.configuration.application.document_formats
-          div style='color: red;'
-            = f.error :documents
+          = f.input :documents,
+                     wrapper: :vertical_file,
+                     as: :file,
+                     input_html: { multiple: true, accept: Rails.configuration.application.document_formats },
+                     label: "Документы",
+                     hint: "До #{number_to_human_size(Rails.configuration.application.max_upload_file_size)}"
       br
       = f.submit class: 'btn btn-bg btn-primary'
