--- a/app/views/admin/verifications/_attributes.slim
+++ b/app/views/admin/verifications/_attributes.slim
@@ -1,6 +1,4 @@
 - item = item.decorate unless item.respond_to?(:decorated?) && item.decorated?
-- decorator = item.decorator_class
-- columns = decorator.attributes
 table.table.table-striped.table-hover.table-narrow
     tr
       th class='text-right' title=:legacy_verification_id
@@ -8,22 +6,22 @@ table.table.table-striped.table-hover.table-narrow
       td class='text-right'
         => item.legacy_verification_id
 
-      tr
-        th class='text-right' title=:status
-          = item.class.human_attribute_name :status
-        td class='text-right'
-          => item.status
+    tr
+      th class='text-right' title=:status
+        = item.class.human_attribute_name :status
+      td class='text-right'
+          = item.status
 
-      tr
-        th class='text-right' title=:reason
-          = item.class.human_attribute_name :reason
-        td class='text-right'
-          => item.reason
+    tr
+      th class='text-right' title=:reason
+        = item.class.human_attribute_name :reason
+      td class='text-right'
+        => item.reason
     tr
       th class='text-right' title=:document_number
           = item.class.human_attribute_name :document_number
       td class='text-right'
-        => item.document_number
+        = item.document_number
         - if dup_documents.any?
           br
           =link_to t('.dup_documents', count: dup_documents.count), admin_verifications_path('q[document_number_eq]': item.document_number), target: '_blank'
@@ -32,7 +30,7 @@ table.table.table-striped.table-hover.table-narrow
       th class='text-right' title=:name
         = item.class.human_attribute_name :name
       td class='text-right'
-        => item.name
+        = item.name
         - if dup_names.any?
           br
           = link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
@@ -40,7 +38,7 @@ table.table.table-striped.table-hover.table-narrow
       th class='text-right' title=:last_name
         = item.class.human_attribute_name :last_name
       td class='text-right'
-        => item.last_name
+        = item.last_name
         - if dup_names.any?
           br
             = link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
@@ -48,7 +46,7 @@ table.table.table-striped.table-hover.table-narrow
       th class='text-right' title=:last_name
         = item.class.human_attribute_name :last_name
       td class='text-right'
-        => item.last_name
+        = item.last_name
         - if dup_names.any?
           br
           = link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
@@ -56,7 +54,7 @@ table.table.table-striped.table-hover.table-narrow
       th class='text-right' title=:email
         = item.class.human_attribute_name :email
       td class='text-right'
-        => item.email
+        = item.email
         - if dup_emails.any?
           br
           = link_to t('.dup_emails', count: dup_names.count), admin_verifications_path('q[email_eq]': item.email), target: '_blank'
@@ -64,9 +62,4 @@ table.table.table-striped.table-hover.table-narrow
       th class='text-right' title=:applicant
         = item.class.human_attribute_name :applicant
       td class='text-right'
-        => item.applicant
-
-
-
-
-
+        = item.applicant
