--- a/app/views/admin/verifications/_attributes.slim
+++ b/app/views/admin/verifications/_attributes.slim
@@ -1,65 +1,65 @@
 - item = item.decorate unless item.respond_to?(:decorated?) && item.decorated?
 table.table.table-striped.table-hover.table-narrow
     tr
-      th class='text-right' title=:legacy_verification_id
+      th.text-right title=:legacy_verification_id
         = item.class.human_attribute_name :legacy_verification_id
-      td class='text-right'
+      td.text-right
         => item.legacy_verification_id
 
     tr
-      th class='text-right' title=:status
+      th.text-right title=:status
         = item.class.human_attribute_name :status
-      td class='text-right'
+      td.text-right
           = item.status
 
     tr
-      th class='text-right' title=:reason
+      th.text-right title=:reason
         = item.class.human_attribute_name :reason
-      td class='text-right'
+      td.text-right
         => item.reason
     tr
-      th class='text-right' title=:document_number
+      th.text-right title=:document_number
           = item.class.human_attribute_name :document_number
-      td class='text-right'
+      td.text-right
         = item.document_number
         - if dup_documents.any?
           br
           =link_to t('.dup_documents', count: dup_documents.count), admin_verifications_path('q[document_number_eq]': item.document_number), target: '_blank'
 
     tr
-      th class='text-right' title=:name
+      th.text-right title=:name
         = item.class.human_attribute_name :name
-      td class='text-right'
+      td.text-right
         = item.name
         - if dup_names.any?
           br
           = link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
     tr
-      th class='text-right' title=:last_name
+      th.text-right title=:last_name
         = item.class.human_attribute_name :last_name
-      td class='text-right'
+      td.text-right
         = item.last_name
         - if dup_names.any?
           br
             = link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
     tr
-      th class='text-right' title=:last_name
+      th.text-right title=:last_name
         = item.class.human_attribute_name :last_name
-      td class='text-right'
+      td.text-right
         = item.last_name
         - if dup_names.any?
           br
           = link_to t('.dup_names', count: dup_names.count), admin_verifications_path('q[name_eq]': item.name, 'q[last_name_eq]': item.last_name), target: '_blank'
     tr
-      th class='text-right' title=:email
+      th.text-right' title=:email
         = item.class.human_attribute_name :email
-      td class='text-right'
+      td.text-right
         = item.email
         - if dup_emails.any?
           br
           = link_to t('.dup_emails', count: dup_names.count), admin_verifications_path('q[email_eq]': item.email), target: '_blank'
     tr
-      th class='text-right' title=:applicant
+      th.text-right title=:applicant
         = item.class.human_attribute_name :applicant
-      td class='text-right'
+      td.text-right
         = item.applicant
