--- a/app/views/application/_attributes.slim
+++ b/app/views/application/_attributes.slim
@@ -4,12 +4,12 @@
 table.table.table-striped.table-hover.table-narrow
   - columns.each do |column|
     tr
-      th class='text-right' title=column
+      th.text-right title=column
         - tip = I18n.t column, scope: [:tips, item.class.model_name.i18n_key], default: nil
         - if tip.present?
           div= item.class.human_attribute_name column
           = column_tip tip
         - else
           = item.class.human_attribute_name column
-      td class='text-right'
+      td.text-right
         = item.send column
